# Neuron-Kernel-Generator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  build_and_generate.sh  generate_all_kernels.sh
src/: base_kernel.cpp  base_kernel.h  kernel-generator.cpp  kernel_registry.cpp  kernel_registry.h  mock_xla.h
src/kernels/: activation_kernels.cpp  activation_kernels.h  arithmetic_kernels.cpp  arithmetic_kernels.h  matrix_kernels.cpp  matrix_kernels.h
